src/modules/70-pipeline/components/ArtifactsSelection/ArtifactRepository/ArtifactConnector.module.scss
/*
 * Copyright 2021 Harness Inc. All rights reserved.
 * Use of this source code is governed by the PolyForm Shield 1.0.0 license
 * that can be found in the licenses directory at the root of this repository, also available at
 * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
 */

.existingDocker {
  position: absolute;
  top: 0;
  height: 100%;
  width: 100%;

  div[class*='StepWizard---navStep']:nth-of-type(2) {
    display: none !important;
  }
}

.firstep {
  padding: var(--spacing-small) 0 0 var(--spacing-small) !important;
  height: 100%;
  div[class*='OverlaySpinner'] {
    height: 100%;
  }

  .heading {
    color: var(--grey-800);
    font-size: var(--font-size-medium);
    letter-spacing: 0;
  }
  .connectorForm {
    height: 100%;
    min-height: 400px;
  }

  .artifactForm {
    height: 450px;
    margin-bottom: 20px;
    overflow: scroll;
  }

  .artifactSelect {
    button.bp3-button {
      width: 380px;
    }
  }
  .dockerSideCard {
    display: grid;
    grid-template-columns: 400px 20px;
  }
  .imagePathContainer {
    display: grid;
    grid-template-columns: 400px 20px;
    margin-top: var(--spacing-large);
    div.configureOptions {
      position: relative;
      top: 22px;
    }
  }
  .inputWidth {
    width: 50% !important;
  }
  .customArtifactContainer {
    display: grid;
    grid-template-columns: 400px 20px;
    div.configureOptions {
      position: relative;
      top: 22px;
    }
  }
  .connectorContainer {
    .addNewArtifact {
      margin-top: 25px;
    }
    .configureOptions {
      margin-top: 21px;
    }
  }
  .tagGroup {
    width: 60%;
    margin-top: var(--spacing-large);
    &.marginBottom {
      margin-top: 0;
      margin-bottom: var(--spacing-large);
    }
    .radioGroup {
      > div > div {
        display: flex;
        justify-content: flex-start;
        > label {
          font-size: var(--font-size-normal);
          color: var(--radio-group-label);
          margin-right: 100px;
        }
      }
    }
  }
}

.expanded {
  width: 600px !important;
}

.padSmall {
  padding: var(--spacing-small) !important;
}

.headerContainer {
  min-height: 400px;
}

.optionsViewContainer {
  margin-left: 20px !important;
}

.optionsViewGrid {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: 1fr;
  grid-column-gap: var(--spacing-large);
  grid-row-gap: 0px;

  > div {
    background-color: var(--white) !important;
  }
}

.squareCardContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 85px;
  margin-right: var(--spacing-small);
}

.artifactIcon {
  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
  margin-bottom: var(--spacing-small);
}

.tagInputButton {
  :global(.bp3-button) {
    overflow-wrap: anywhere;
    height: auto !important;
    max-height: initial !important;
    padding-right: var(--spacing-xlarge) !important;
  }
  :global(.bp3-menu) {
    max-height: 100px !important;
  }
}
.thumbnailSelect {
  cursor: pointer;
  min-width: 680px;

  .wrapping {
    display: flex;
    flex-wrap: wrap;

    label {
      margin-left: 0px !important;
      margin-right: var(--layout-spacing);
      margin-bottom: var(--layout-spacing);
    }
  }
}
.panel {
  border: 1px solid var(--form-field-border);
  border-radius: 4px;
  padding: var(--spacing-small);
  margin-top: var(--spacing-small);
}

.variables {
  display: grid;
  grid-template-columns: 1.5fr 1fr 2fr 30px;
  column-gap: var(--spacing-small);
  margin-bottom: var(--spacing-small);
  align-items: start;

  :global(.bp3-form-group) {
    margin: 0;
  }

  .label {
    color: var(--grey-400);
  }
}

